fix : responsive form on tablet / mobile

--- a/css/modal.css
+++ b/css/modal.css
@@ -539,7 +539,7 @@ footer {
 	.content {
 		width: 95%;
 		height: auto;
-		margin: 5% auto 0;
+		margin: 4% auto 0;
 	}
 
 	.header-logo img {
